--- a/Backend-claaran/package.json
+++ b/Backend-claaran/package.json
@@ -15,6 +15,7 @@
   "author": "Laura Campos <lauracampos14092015@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.1"
   }
